--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,7 +8,7 @@ license = "MIT"
 python = "^3.10"
 fastapi = "^0.80.0"
 uvicorn = "^0.18.3"
-
+ebooklib = "^0.17.1"
 [tool.poetry.dev-dependencies]
 
 [build-system]
