--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,6 +9,7 @@ python = "^3.10"
 fastapi = "^0.80.0"
 uvicorn = "^0.18.3"
 ebooklib = "^0.17.1"
+beautifulsoup4 ="^4.11.1"
 [tool.poetry.dev-dependencies]
 
 [build-system]
