--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,6 +11,7 @@ uvicorn = "^0.18.3"
 ebooklib = "^0.17.1"
 beautifulsoup4 ="^4.11.1"
 nltk = "^3.7"
+python-multipart = "^0.0.5"
 [tool.poetry.dev-dependencies]
 
 [build-system]
